[package]
name = "kube-minion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
getopts = "0.2.21"
sysinfo = "0.29.0"
regex = "1.8.1"
serde_json = "1.0.96"
signal-hook = "0.3.15"
json_comments = "0.2.1"
